css for 768px is done

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 * {
+    box-sizing: border-box;
     font-family: 'Merriweather', serif;
     color: #617383;
-    margin-bottom: 3px;
+    /* margin-bottom: 3px; */
 }
 header {   
     background-color: #2D3945;
@@ -37,7 +38,7 @@ legend {
 }
 
 label {
-    align-self: flex-start;
+    /* align-self: flex-start; */
 }
 input:focus {
     border: 1px solid black;
@@ -60,11 +61,57 @@ footer{
 }
 
 .top {
-    border-bottom: 2px double black;
+    border-bottom: 2px solid black;
     text-align: center;
+    line-height: 0.5rem;
+    padding-bottom: 25px;
+    border-bottom: 2px solid black;
+}
+.form {
+    margin-top: 3px;
+    border-top: 1px double black;
+    padding-top: 25px;
 }
 .contact_info {
-    border-top: 1px solid red;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid black;
     margin-bottom: 20px;
 }
+
+.contact_field {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 768px) {
+
+    
+    .top, .form, .footer {
+        width: 600px;
+        margin: 3 auto;
+    }
+    
+    label {
+        margin: 3px;
+    }
+    .contact_field {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 5px 0;
+    }
+    .contact_field input, .contact_field select {
+        width: 400px;
+        margin-left: auto;
+        
+    }
+
+    .newsletter_field {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    
+    
+
+}
+    
