--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ label {
 }
 input:focus {
     border: 1px solid black;
+    background-color: bisque;
 }
 
 input[type="submit"] {
@@ -60,6 +61,11 @@ footer{
     text-align: center;
 }
 
+input {
+    transition-property: background-color;
+    transition-duration: 1s;
+}
+
 .top {
     border-bottom: 2px solid black;
     text-align: center;
@@ -75,6 +81,7 @@ footer{
 .contact_info {
     border-bottom: 1px solid black;
     margin-bottom: 20px;
+    background-color: azure;
 }
 
 .contact_field {
@@ -87,7 +94,7 @@ footer{
     
     .top, .form, .footer {
         width: 600px;
-        margin: 3 auto;
+        margin: 3px auto;
     }
     
     label {
